# pythonProject5

./: .coverage  README.md  main.py  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_add_py.html  z_145eef247bfb46b6_exercise_py.html  z_145eef247bfb46b6_exercises_py.html
src/: add.py  exercise.py  exercises.py  taxes.py
tests/: conftest.py  test_add.py  test_taxes.py
